out/production/Online sop/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacts</label>
        <referenceTo>Contacts__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_purchase__c</fullName>
        <label>Date of purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_receipt__c</fullName>
        <label>Date of receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_purchase__c</fullName>
        <label>Number of purchase</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Status__c</fullName>
        <label>Sale Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>Made</fullName>
        <active>true</active>
        <label>Made</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sold</fullName>
        <active>true</active>
        <label>Sold</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>